--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -14,6 +14,7 @@ provider:
         - dynamodb:GetItem
         - dynamodb:Query
         - dynamodb:DeleteItem
+        - dynamodb:Scan
       Resource: "*"
   environment:
     STAGE: ${self:provider.stage}
